<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="adapter"
            type="com.sim2g.icbt.ui.adapters.OperatorsAdapter" />

        <variable
            name="viewModel"
            type="com.sim2g.icbt.ui.viewmodels.OperatorsViewModel" />

    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUserMgmt"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user_management"
            android:textAllCaps="false"
            android:orientation="vertical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAsign"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_asign_user"
            android:textAllCaps="false"
            android:orientation="vertical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUserProfil"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_my_profile"
            android:textAllCaps="false"
            android:orientation="vertical" />

    </LinearLayout>
</layout>